// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a EPS 1`] = `
"%!PS-Adobe-3.0 EPSF-3.0
%%BoundingBox: 0 0 243 243
/h { 0 rlineto } bind def
/v { 0 exch neg rlineto } bind def
/M { neg 26 add moveto } bind def
/z { closepath } bind def
9 9 scale
1 0 M 7 h 7 v -7 h z
9 0 M 1 h 1 v -1 h z
11 0 M 3 h 1 v 1 h -1 v 3 h 2 v -1 h -1 v -1 h 1 v 1 h 1 v -1 h 1 v 1 h 1 v -2 h -1 v -2 h -1 v 2 h -1 v -2 h -1 v -1 h 1 v -1 h z
19 0 M 7 h 7 v -7 h z
2 1 M 5 v 5 h -5 v z
20 1 M 5 v 5 h -5 v z
3 2 M 3 h 3 v -3 h z
10 2 M 1 h 1 v 1 h 4 v -1 h -2 v -1 h 3 v 1 h 2 v -1 h 1 v -1 h -2 v -2 h -1 v 2 h -5 v 1 h z
21 2 M 3 h 3 v -3 h z
17 3 M 1 h 1 v -1 h z
13 5 M 2 h 1 v -1 h 2 v -1 h 1 v 4 h -3 v 1 h 2 v 5 h 2 v 1 h 1 v 1 h 1 v -4 h 1 v 3 h 1 v -2 h 1 v -1 h -1 v -1 h -1 v -1 h 1 v -2 h 1 v -1 h 1 v -1 h -1 v -2 h 1 v -1 h -2 v 1 h -1 v 4 h -1 v -2 h -1 v 1 h -1 v -2 h 2 v -1 h 1 v -1 h 1 v -1 h 1 v -1 h -1 v -2 h -1 v 1 h -1 v 1 h -1 v 1 h 1 v 1 h -1 v 1 h -1 v -1 h -3 v 1 h z
15 6 M 1 h 2 v -1 h z
1 8 M 1 h 1 v -1 h z
5 8 M 1 h 2 v 2 h 1 v -4 h -1 v 1 h z
25 8 M 1 h 1 v -1 h z
18 9 M 1 v -1 h 1 v 2 h -1 v 2 h 1 v 1 h -1 v -1 h -1 v z
1 10 M 2 h 1 v 1 h 1 v 1 h 1 v -2 h -1 v -1 h -1 v -1 h z
11 10 M 1 h 1 v -1 h z
8 11 M 1 h 1 v -1 h z
1 12 M 1 h 2 v -1 h z
6 12 M 2 h 1 v -2 h z
25 12 M 1 h 1 v -1 h z
5 13 M 1 h 1 v -1 h z
3 14 M 1 h 1 v -1 h z
6 14 M 2 h 1 v -1 h 1 v 2 h 1 v -4 h -1 v 1 h z
24 14 M 1 h 1 v -1 h z
4 15 M 1 h 1 v -1 h z
22 15 M 2 h 2 v -1 h -1 v -1 h z
1 16 M 2 h 1 v -2 h z
10 16 M 2 h 1 v -2 h z
13 16 M 1 h 1 v -1 h z
16 16 M 6 h 2 v 2 h 1 v 2 h 3 v -1 h 2 v 1 h 1 v -3 h -2 v -1 h -1 v 2 h -2 v -1 h -1 v -1 h 2 v -2 h 1 v 1 h 2 v -1 h -1 v -1 h -1 v -1 h 1 v -1 h 2 v -1 h -2 v -1 h 2 v -2 h -1 v 1 h -1 v -1 h 1 v -1 h 1 v -3 h -1 v 1 h -1 v 1 h -2 v -2 h -1 v 1 h -1 v 1 h 1 v 2 h 1 v -1 h 1 v 1 h -1 v 1 h 1 v 1 h -1 v -1 h -1 v 1 h -2 v -1 h -1 v 2 h 2 v 1 h -2 v -1 h z
9 17 M 1 h 2 v -1 h z
18 17 M 3 v 3 h -3 v z
25 17 M 1 h 1 v -1 h z
1 18 M 7 h 7 v -7 h z
19 18 M 1 h 1 v -1 h z
2 19 M 5 v 5 h -5 v z
13 19 M 1 h 1 v -1 h z
3 20 M 3 h 3 v -3 h z
16 20 M 2 v 1 h -2 v z
18 24 M 2 h 1 v -2 h z
fill
%%EOF"
`;

exports[`renders a JSON  1`] = `
Array [
  Array [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  Array [
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  Array [
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
  ],
  Array [
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
  ],
  Array [
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
  ],
  Array [
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  Array [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  Array [
    1,
    0,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    1,
  ],
  Array [
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
  ],
  Array [
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    1,
    0,
    1,
    1,
    0,
    0,
  ],
  Array [
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
  ],
  Array [
    1,
    0,
    1,
    1,
    0,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
  ],
  Array [
    1,
    0,
    0,
    0,
    1,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
  ],
  Array [
    0,
    0,
    1,
    0,
    0,
    1,
    1,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
  ],
  Array [
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
  ],
  Array [
    1,
    1,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    0,
    1,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
  ],
  Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    1,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
  ],
  Array [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
  ],
  Array [
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    0,
    1,
    1,
    1,
  ],
  Array [
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    1,
    1,
  ],
  Array [
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    1,
  ],
  Array [
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
  ],
  Array [
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    1,
    1,
    1,
    0,
    1,
    0,
    1,
    0,
    0,
    0,
    1,
    0,
    0,
    1,
    1,
    0,
  ],
  Array [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    1,
    1,
    0,
    1,
    0,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
  ],
]
`;

exports[`renders a PDF 1`] = `
"%PDF-1.0

1 0 obj << /Type /Catalog /Pages 2 0 R >> endobj
2 0 obj << /Type /Pages /Count 1 /Kids [ 3 0 R ] >> endobj
3 0 obj << /Type /Page /Parent 2 0 R /Resources <<>> /Contents 4 0 R /MediaBox [ 0 0 243 243 ] >> endobj
4 0 obj << /Length 2894 >> stream
9 0 0 9 0 0 cm
1 26 m 8 26 l 8 19 l 1 19 l h
9 26 m 10 26 l 10 25 l 9 25 l h
11 26 m 14 26 l 14 25 l 15 25 l 15 26 l 18 26 l 18 24 l 17 24 l 17 25 l 16 25 l 16 24 l 17 24 l 17 23 l 16 23 l 16 22 l 17 22 l 17 21 l 15 21 l 15 22 l 13 22 l 13 23 l 15 23 l 15 24 l 13 24 l 13 25 l 12 25 l 12 24 l 11 24 l h
19 26 m 26 26 l 26 19 l 19 19 l h
2 25 m 2 20 l 7 20 l 7 25 l h
20 25 m 20 20 l 25 20 l 25 25 l h
3 24 m 6 24 l 6 21 l 3 21 l h
10 24 m 11 24 l 11 23 l 12 23 l 12 19 l 11 19 l 11 21 l 10 21 l 10 18 l 11 18 l 11 16 l 10 16 l 10 15 l 9 15 l 9 17 l 7 17 l 7 18 l 9 18 l 9 23 l 10 23 l h
21 24 m 24 24 l 24 21 l 21 21 l h
17 23 m 18 23 l 18 22 l 17 22 l h
13 21 m 15 21 l 15 20 l 14 20 l 14 18 l 13 18 l 13 17 l 17 17 l 17 20 l 18 20 l 18 18 l 23 18 l 23 16 l 24 16 l 24 15 l 25 15 l 25 14 l 21 14 l 21 13 l 24 13 l 24 12 l 22 12 l 22 11 l 21 11 l 21 12 l 20 12 l 20 13 l 19 13 l 19 12 l 17 12 l 17 11 l 16 11 l 16 10 l 15 10 l 15 11 l 13 11 l 13 10 l 12 10 l 12 12 l 13 12 l 13 13 l 17 13 l 17 14 l 15 14 l 15 15 l 16 15 l 16 16 l 14 16 l 14 14 l 13 14 l 13 13 l 12 13 l 12 12 l 11 12 l 11 11 l 10 11 l 10 12 l 8 12 l 8 13 l 9 13 l 9 14 l 10 14 l 10 15 l 11 15 l 11 14 l 12 14 l 12 15 l 13 15 l 13 16 l 12 16 l 12 19 l 13 19 l h
15 20 m 16 20 l 16 18 l 15 18 l h
1 18 m 2 18 l 2 17 l 1 17 l h
5 18 m 6 18 l 6 16 l 8 16 l 8 15 l 4 15 l 4 16 l 5 16 l h
25 18 m 26 18 l 26 17 l 25 17 l h
18 17 m 18 16 l 17 16 l 17 15 l 19 15 l 19 16 l 21 16 l 21 15 l 22 15 l 22 16 l 21 16 l 21 17 l h
1 16 m 3 16 l 3 15 l 4 15 l 4 14 l 5 14 l 5 13 l 3 13 l 3 14 l 2 14 l 2 15 l 1 15 l h
11 16 m 12 16 l 12 15 l 11 15 l h
8 15 m 9 15 l 9 14 l 8 14 l h
1 14 m 2 14 l 2 12 l 1 12 l h
6 14 m 8 14 l 8 13 l 6 13 l h
25 14 m 26 14 l 26 13 l 25 13 l h
5 13 m 6 13 l 6 12 l 5 12 l h
3 12 m 4 12 l 4 11 l 3 11 l h
6 12 m 8 12 l 8 11 l 7 11 l 7 10 l 9 10 l 9 9 l 5 9 l 5 10 l 6 10 l h
24 12 m 25 12 l 25 11 l 24 11 l h
4 11 m 5 11 l 5 10 l 4 10 l h
22 11 m 24 11 l 24 9 l 23 9 l 23 10 l 22 10 l h
1 10 m 3 10 l 3 9 l 1 9 l h
10 10 m 12 10 l 12 9 l 10 9 l h
13 10 m 14 10 l 14 9 l 13 9 l h
16 10 m 22 10 l 22 8 l 24 8 l 24 7 l 26 7 l 26 4 l 25 4 l 25 2 l 26 2 l 26 1 l 23 1 l 23 3 l 22 3 l 22 4 l 24 4 l 24 6 l 23 6 l 23 7 l 22 7 l 22 5 l 20 5 l 20 4 l 21 4 l 21 2 l 20 2 l 20 3 l 19 3 l 19 4 l 18 4 l 18 3 l 17 3 l 17 1 l 16 1 l 16 3 l 15 3 l 15 1 l 13 1 l 13 2 l 14 2 l 14 3 l 13 3 l 13 2 l 12 2 l 12 1 l 9 1 l 9 2 l 10 2 l 10 3 l 11 3 l 11 5 l 9 5 l 9 6 l 10 6 l 10 7 l 11 7 l 11 6 l 13 6 l 13 5 l 12 5 l 12 4 l 13 4 l 13 5 l 14 5 l 14 4 l 15 4 l 15 5 l 14 5 l 14 6 l 15 6 l 15 8 l 14 8 l 14 9 l 16 9 l 16 7 l 17 7 l 17 9 l 16 9 l h
9 9 m 10 9 l 10 7 l 9 7 l h
18 9 m 18 6 l 21 6 l 21 9 l h
25 9 m 26 9 l 26 8 l 25 8 l h
1 8 m 8 8 l 8 1 l 1 1 l h
19 8 m 20 8 l 20 7 l 19 7 l h
2 7 m 2 2 l 7 2 l 7 7 l h
13 7 m 14 7 l 14 6 l 13 6 l h
3 6 m 6 6 l 6 3 l 3 3 l h
16 6 m 16 4 l 17 4 l 17 6 l h
18 2 m 20 2 l 20 1 l 18 1 l h
f
endstream
endobj
xref
0 5
0000000000 65535 f 
0000000010 00000 n 
0000000059 00000 n 
0000000118 00000 n 
0000000223 00000 n 
trailer << /Root 1 0 R /Size 5 >>
startxref
3169
%%EOF"
`;

exports[`renders a PNG 1`] = `
Object {
  "data": Array [
    137,
    80,
    78,
    71,
    13,
    10,
    26,
    10,
    0,
    0,
    0,
    13,
    73,
    72,
    68,
    82,
    0,
    0,
    0,
    165,
    0,
    0,
    0,
    165,
    8,
    0,
    0,
    0,
    0,
    24,
    64,
    98,
    6,
    0,
    0,
    1,
    119,
    73,
    68,
    65,
    84,
    120,
    218,
    237,
    219,
    49,
    130,
    131,
    48,
    12,
    4,
    64,
    254,
    255,
    233,
    187,
    242,
    26,
    32,
    187,
    1,
    2,
    202,
    141,
    75,
    72,
    236,
    161,
    16,
    18,
    194,
    44,
    63,
    19,
    198,
    66,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    121,
    174,
    114,
    121,
    61,
    254,
    126,
    183,
    246,
    143,
    244,
    216,
    230,
    204,
    148,
    148,
    163,
    149,
    219,
    1,
    183,
    114,
    54,
    176,
    189,
    57,
    51,
    37,
    229,
    84,
    229,
    254,
    154,
    47,
    166,
    94,
    9,
    219,
    106,
    102,
    74,
    202,
    47,
    86,
    86,
    121,
    145,
    146,
    146,
    242,
    197,
    217,
    25,
    49,
    78,
    73,
    121,
    189,
    50,
    184,
    134,
    205,
    213,
    207,
    169,
    92,
    41,
    41,
    7,
    42,
    251,
    222,
    70,
    117,
    13,
    183,
    117,
    96,
    40,
    41,
    47,
    85,
    198,
    237,
    238,
    149,
    244,
    215,
    119,
    52,
    174,
    238,
    254,
    83,
    82,
    126,
    82,
    89,
    245,
    254,
    146,
    242,
    48,
    12,
    234,
    227,
    121,
    156,
    146,
    242,
    110,
    101,
    37,
    79,
    211,
    95,
    240,
    236,
    118,
    252,
    78,
    68,
    73,
    121,
    183,
    50,
    88,
    61,
    168,
    37,
    211,
    36,
    26,
    80,
    41,
    41,
    199,
    40,
    171,
    38,
    197,
    230,
    154,
    75,
    61,
    40,
    41,
    231,
    43,
    131,
    133,
    247,
    131,
    63,
    168,
    47,
    207,
    236,
    95,
    82,
    82,
    62,
    81,
    25,
    164,
    186,
    190,
    200,
    172,
    194,
    155,
    146,
    114,
    150,
    50,
    45,
    15,
    211,
    166,
    121,
    58,
    51,
    37,
    229,
    55,
    41,
    171,
    6,
    121,
    181,
    240,
    73,
    79,
    103,
    148,
    148,
    15,
    83,
    110,
    134,
    242,
    126,
    190,
    75,
    51,
    105,
    218,
    142,
    167,
    164,
    28,
    168,
    60,
    210,
    107,
    15,
    228,
    213,
    49,
    74,
    202,
    89,
    202,
    126,
    63,
    81,
    213,
    60,
    92,
    91,
    227,
    208,
    157,
    136,
    146,
    242,
    97,
    202,
    55,
    203,
    200,
    106,
    159,
    120,
    234,
    165,
    164,
    28,
    168,
    172,
    190,
    163,
    232,
    223,
    79,
    197,
    239,
    192,
    40,
    41,
    191,
    77,
    121,
    98,
    54,
    164,
    164,
    252,
    223,
    202,
    234,
    133,
    84,
    85,
    100,
    82,
    82,
    14,
    84,
    86,
    111,
    170,
    210,
    79,
    40,
    170,
    228,
    72,
    73,
    57,
    80,
    217,
    111,
    109,
    216,
    111,
    10,
    6,
    123,
    194,
    47,
    236,
    12,
    82,
    82,
    126,
    72,
    249,
    184,
    65,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    73,
    249,
    254,
    248,
    5,
    45,
    233,
    167,
    91,
    70,
    208,
    82,
    189,
    0,
    0,
    0,
    0,
    73,
    69,
    78,
    68,
    174,
    66,
    96,
    130,
  ],
  "type": "Buffer",
}
`;

exports[`renders a PNG with options 1`] = `
Object {
  "data": Array [
    137,
    80,
    78,
    71,
    13,
    10,
    26,
    10,
    0,
    0,
    0,
    13,
    73,
    72,
    68,
    82,
    0,
    0,
    1,
    23,
    0,
    0,
    1,
    23,
    8,
    0,
    0,
    0,
    0,
    162,
    184,
    95,
    8,
    0,
    0,
    2,
    162,
    73,
    68,
    65,
    84,
    120,
    218,
    237,
    218,
    65,
    146,
    195,
    48,
    8,
    4,
    64,
    255,
    255,
    211,
    155,
    7,
    100,
    15,
    2,
    198,
    174,
    72,
    110,
    142,
    73,
    92,
    18,
    237,
    203,
    20,
    228,
    250,
    83,
    255,
    213,
    133,
    128,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    178,
    173,
    203,
    53,
    171,
    165,
    195,
    42,
    143,
    127,
    127,
    85,
    250,
    100,
    216,
    5,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    203,
    1,
    46,
    181,
    92,
    184,
    208,
    216,
    202,
    237,
    135,
    141,
    197,
    187,
    224,
    194,
    133,
    11,
    23,
    46,
    92,
    184,
    112,
    57,
    201,
    37,
    117,
    143,
    146,
    221,
    147,
    9,
    152,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    75,
    207,
    101,
    152,
    128,
    83,
    63,
    230,
    194,
    133,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    50,
    76,
    156,
    205,
    191,
    0,
    134,
    50,
    49,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    203,
    107,
    93,
    238,
    219,
    79,
    151,
    126,
    211,
    59,
    116,
    203,
    189,
    61,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    75,
    212,
    165,
    87,
    169,
    45,
    242,
    125,
    219,
    232,
    90,
    23,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    23,
    46,
    219,
    186,
    164,
    106,
    184,
    132,
    238,
    181,
    145,
    239,
    130,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    229,
    32,
    151,
    222,
    32,
    178,
    23,
    142,
    135,
    205,
    151,
    242,
    55,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    203,
    217,
    46,
    189,
    63,
    243,
    165,
    162,
    240,
    240,
    172,
    43,
    84,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    23,
    46,
    7,
    184,
    60,
    144,
    38,
    75,
    29,
    246,
    30,
    31,
    158,
    206,
    133,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    114,
    182,
    75,
    47,
    149,
    246,
    58,
    124,
    224,
    95,
    143,
    75,
    239,
    155,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    229,
    101,
    46,
    165,
    149,
    115,
    60,
    194,
    246,
    174,
    26,
    155,
    99,
    114,
    225,
    194,
    133,
    11,
    23,
    46,
    92,
    184,
    252,
    182,
    75,
    124,
    247,
    188,
    98,
    215,
    235,
    39,
    53,
    42,
    229,
    194,
    133,
    11,
    23,
    46,
    92,
    184,
    112,
    57,
    219,
    165,
    20,
    106,
    135,
    10,
    165,
    199,
    75,
    82,
    189,
    185,
    42,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    203,
    190,
    46,
    189,
    12,
    154,
    122,
    60,
    133,
    152,
    186,
    51,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    203,
    217,
    46,
    189,
    120,
    58,
    93,
    21,
    183,
    86,
    224,
    189,
    118,
    184,
    112,
    225,
    194,
    133,
    11,
    23,
    46,
    92,
    14,
    112,
    137,
    71,
    207,
    33,
    80,
    111,
    254,
    88,
    90,
    66,
    215,
    230,
    187,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    23,
    46,
    155,
    184,
    60,
    217,
    216,
    125,
    173,
    14,
    119,
    216,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    23,
    46,
    7,
    184,
    172,
    228,
    221,
    222,
    130,
    185,
    215,
    106,
    60,
    19,
    215,
    222,
    28,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    203,
    254,
    46,
    241,
    253,
    116,
    233,
    210,
    195,
    86,
    123,
    171,
    107,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    151,
    35,
    93,
    134,
    53,
    84,
    24,
    190,
    149,
    212,
    161,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    23,
    46,
    251,
    186,
    92,
    179,
    74,
    133,
    209,
    94,
    164,
    30,
    238,
    176,
    151,
    246,
    246,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    23,
    46,
    187,
    185,
    164,
    210,
    109,
    42,
    167,
    246,
    38,
    164,
    249,
    188,
    203,
    133,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    178,
    173,
    75,
    41,
    221,
    166,
    38,
    155,
    189,
    44,
    59,
    140,
    212,
    181,
    188,
    203,
    133,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    242,
    14,
    151,
    248,
    39,
    247,
    205,
    58,
    155,
    115,
    76,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    151,
    215,
    187,
    12,
    55,
    205,
    165,
    67,
    123,
    3,
    77,
    46,
    92,
    184,
    112,
    225,
    194,
    133,
    11,
    151,
    35,
    93,
    226,
    155,
    230,
    225,
    32,
    50,
    197,
    186,
    68,
    207,
    133,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    178,
    191,
    203,
    240,
    174,
    169,
    221,
    115,
    106,
    9,
    221,
    252,
    138,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    194,
    101,
    91,
    23,
    197,
    133,
    11,
    23,
    46,
    92,
    184,
    112,
    225,
    178,
    115,
    125,
    0,
    57,
    131,
    195,
    90,
    170,
    196,
    47,
    176,
    0,
    0,
    0,
    0,
    73,
    69,
    78,
    68,
    174,
    66,
    96,
    130,
  ],
  "type": "Buffer",
}
`;

exports[`renders a SVG 1`] = `"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"81\\" height=\\"81\\" viewBox=\\"0 0 27 27\\"><path d=\\"M1 1h7v7h-7zM9 1h1v1h-1zM11 1h3v1h1v-1h3v2h-1v-1h-1v1h1v1h-1v1h1v1h-2v-1h-2v-1h2v-1h-2v-1h-1v1h-1zM19 1h7v7h-7zM2 2v5h5v-5zM20 2v5h5v-5zM3 3h3v3h-3zM10 3h1v1h1v4h-1v-2h-1v3h1v2h-1v1h-1v-2h-2v-1h2v-5h1zM21 3h3v3h-3zM17 4h1v1h-1zM13 6h2v1h-1v2h-1v1h4v-3h1v2h5v2h1v1h1v1h-4v1h3v1h-2v1h-1v-1h-1v-1h-1v1h-2v1h-1v1h-1v-1h-2v1h-1v-2h1v-1h4v-1h-2v-1h1v-1h-2v2h-1v1h-1v1h-1v1h-1v-1h-2v-1h1v-1h1v-1h1v1h1v-1h1v-1h-1v-3h1zM15 7h1v2h-1zM1 9h1v1h-1zM5 9h1v2h2v1h-4v-1h1zM25 9h1v1h-1zM18 10v1h-1v1h2v-1h2v1h1v-1h-1v-1zM1 11h2v1h1v1h1v1h-2v-1h-1v-1h-1zM11 11h1v1h-1zM8 12h1v1h-1zM1 13h1v2h-1zM6 13h2v1h-2zM25 13h1v1h-1zM5 14h1v1h-1zM3 15h1v1h-1zM6 15h2v1h-1v1h2v1h-4v-1h1zM24 15h1v1h-1zM4 16h1v1h-1zM22 16h2v2h-1v-1h-1zM1 17h2v1h-2zM10 17h2v1h-2zM13 17h1v1h-1zM16 17h6v2h2v1h2v3h-1v2h1v1h-3v-2h-1v-1h2v-2h-1v-1h-1v2h-2v1h1v2h-1v-1h-1v-1h-1v1h-1v2h-1v-2h-1v2h-2v-1h1v-1h-1v1h-1v1h-3v-1h1v-1h1v-2h-2v-1h1v-1h1v1h2v1h-1v1h1v-1h1v1h1v-1h-1v-1h1v-2h-1v-1h2v2h1v-2h-1zM9 18h1v2h-1zM18 18v3h3v-3zM25 18h1v1h-1zM1 19h7v7h-7zM19 19h1v1h-1zM2 20v5h5v-5zM13 20h1v1h-1zM3 21h3v3h-3zM16 21v2h1v-2zM18 25h2v1h-2z\\"/></svg>"`;
